methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:9: error: not found: value faireV
faireV(Color.RED)faireV(Color.BLUE)faireV(Color.GREEN) 
^